[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"  # 웹 프레임워크
tokio = { version = "1", features = ["full"] }  # 비동기 런타임
serde = { version = "1.0", features = ["derive"] }  # JSON 직렬화/역직렬화
serde_json = "1.0"  # JSON 처리

[[bin]]
name = "rust_server"
path = "src/main.rs"