[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"  # 웹 프레임워크
tokio = { version = "1", features = ["full"] }  # 비동기 런타임
serde = { version = "1.0", features = ["derive"] }  # JSON 직렬화/역직렬화
serde_json = "1.0"  # JSON 처리
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "chrono", "time", "macros"] }
env_logger = "0.10"
log = "0.4"
sha2 = "0.10"
awc = { version = "3.0.0-beta.21" }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
envy = "0.4.2"
actix-cors = "0.6"



[[bin]]
name = "rust_server"
path = "src/main.rs"